--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <meta name="msapplication-tap-highlight" content="no">
   
+  <link rel="icon" href="./assets/images/favicon.ico" type="image/ico" sizes="16x16">
   <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
 
